Add new link for flexbox application tutorial

--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
         <li><a href="https://fcogarciabo.github.io/Unidad-3/5.(8)%20Etiquetas%20semanticas%20%20HTML%20para%20maquetación/index.html">5. Etiquetas semánticas HTML para maquetación </a></li>
 
         <li><a href="https://fcogarciabo.github.io/Unidad-3/6.(9)%20Introducción%20a%20flexbox/index.html">6. FlexBox</a></li>
+
+        <li><a href=https://fcogarciabo.github.io/Unidad-3/7.%20(13)%20Aplicación%20prática%20de%20flexbox%20%20I%20y%20II/index.html> 7. Aplicación prática flexbox I y II</a></li>
     </ul>
     
 </body>
+
 </html>
